RESOLVED FIXED216693
Hash deviceIds in WebProcess instead of UIProcess to allow audio output device IDs in WebProcess
https://bugs.webkit.org/show_bug.cgi?id=216693
Summary Hash deviceIds in WebProcess instead of UIProcess to allow audio output devic...
youenn fablet
Reported 2020-09-18 02:53:11 PDT
Hash deviceIds in WebProcess instead of UIProcess to allow audio output device IDs in WebProcess
Attachments
Patch (12.74 KB, patch)
2020-09-18 02:54 PDT, youenn fablet
no flags
Patch (13.32 KB, patch)
2020-09-18 05:25 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2020-09-18 02:54:53 PDT
youenn fablet
Comment 2 2020-09-18 05:25:33 PDT
EWS
Comment 3 2020-09-18 10:15:22 PDT
Committed r267246: <https://trac.webkit.org/changeset/267246> All reviewed patches have been landed. Closing bug and clearing flags on attachment 409126 [details].
Radar WebKit Bug Importer
Comment 4 2020-09-18 10:16:17 PDT
Note You need to log in before you can comment on or make changes to this bug.