Hash deviceIds in WebProcess instead of UIProcess to allow audio output device IDs in WebProcess https://bugs.webkit.org/show_bug.cgi?id=216693

Reviewed by Eric Carlson.

LayoutTests/imported/w3c:

* web-platform-tests/mediacapture-streams/MediaDevices-enumerateDevices-returned-objects.https-expected.txt:

Source/WebCore:

Make sure to create new MediaDeviceInfo objects everytime enumerateDevices is called.
Covered by updated tests.

* Modules/mediastream/MediaDevices.cpp:
(WebCore::MediaDevices::MediaDevices):
(WebCore::MediaDevices::stop):
(WebCore::MediaDevices::computeDevices):
(WebCore::MediaDevices::enumerateDevices):
(WebCore::MediaDevices::refreshDevices): Deleted.
* Modules/mediastream/MediaDevices.h:

Source/WebKit:

* UIProcess/UserMediaPermissionRequestManagerProxy.cpp:
(WebKit::UserMediaPermissionRequestManagerProxy::computeFilteredDeviceList):
(WebKit::UserMediaPermissionRequestManagerProxy::enumerateMediaDevicesForFrame):
* UIProcess/UserMediaPermissionRequestManagerProxy.h:

LayoutTests:

* fast/mediastream/device-change-event-2.html:


Canonical link: https://commits.webkit.org/229507@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267246 268f45cc-cd09-0410-ab3c-d52691b4dbfc