Source/WebCore/Modules/mediastream/MediaDevices.h
@@ -98,7 +98,7 @@ private:
     void scheduledEventTimerFired();
     bool addEventListener(const AtomString& eventType, Ref<EventListener>&&, const AddEventListenerOptions&) override;
 
-    void refreshDevices(const Vector<CaptureDevice>&);
+    void exposeDevices(const Vector<CaptureDevice>&, const String&, EnumerateDevicesPromise&&);
     void listenForDeviceChanges();
 
     friend class JSMediaDevicesOwner;
@@ -126,8 +126,7 @@ private:
     const EventNames& m_eventNames; // Need to cache this so we can use it from GC threads.
     bool m_listeningForDeviceChanges { false };
 
-    Vector<Ref<MediaDeviceInfo>> m_devices;
-    String m_idHashSalt;
+    String m_groupIdHashSalt;
 
     OptionSet<GestureAllowedRequest> m_requestTypesForCurrentGesture;
     WeakPtr<UserGestureToken> m_currentGestureToken;
